*SVN*

* Make sure that custom inflections are picked up by map.resources.  #9815 [mislav]

* Changed SanitizeHelper#sanitize to only allow the custom attributes and tags when specified in the call [DHH]

* Extracted sanitization methods from TextHelper to SanitizeHelper [DHH]

* rescue_from accepts :with => lambda { |exception| ... } or a normal block.  #9827 [lifofifo]

* Add :status to redirect_to allowing users to choose their own response code without manually setting headers. #8297 [codahale, chasgrundy]

* Add link_to :back which uses your referrer with a fallback to a javascript link. #7366 [eventualbuddha, tarmo]

* error_messages_for and friends also work with local variables.  #9699 [Frederick Cheung]

* Fix url_for, redirect_to, etc. with :controller => :symbol instead of 'string'.  #8562, #9525 [Justin Lynn, Tarmo Tänav, shoe]

* Use #require_library_or_gem to load the memcache library for the MemCache session and fragment cache stores.  Closes #8662. [Rick]

* Move ActionController::Routing.optimise_named_routes to ActionController::Base.optimise_named_routes.  Now you can set it in the config. [Rick]

  config.action_controller.optimise_named_routes = false

* ActionController::Routing::DynamicSegment#interpolation_chunk should call #to_s on all values before calling URI.escape.  [Rick]

* Only accept session ids from cookies, prevents session fixation attacks.  [bradediger] 

*2.0.0 [Preview Release]* (September 29th, 2007) [Includes duplicates of changes from 1.12.2 - 1.13.3]

* Fixed that render template did not honor exempt_from_layout #9698 [pezra]

* Better error messages if you leave out the :secret option for request forgery protection.  Closes #9670 [rick]

* Allow ability to disable request forgery protection, disable it in test mode by default.  Closes #9693 [lifofifo]

* Avoid calling is_missing on LoadErrors. Closes #7460. [ntalbott]
